--- a/style.css
+++ b/style.css
@@ -2,9 +2,7 @@ body{
   margin: 0;
   padding: 0;
   background: url(bg.png) no-repeat;
-  background-size: cover;
-  transform: scale(0.1); /* Decrease the size to 10% */
-  transform-origin: 0 0; /* Set the transformation origin to top-left */
+  background-size: scale(0.1);
 }
 .box{
   width: 4000px;
