--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
   margin: 0;
   padding: 0;
   background: url(bg.png) no-repeat;
-  background-size: cover;
+  background-size: scale (0.5);
   transform: scale(0.5);
 }
 .box{
