--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body{
   margin: 0;
   padding: 0;
-  background: url(bg.png) no-repeat;
-  background-size: scale(0.5);
-  transform: scale(0.8);
+  background: url(bg.png);
+  background-size: scale(1);
+  transform: scale(1);
 }
 .box{
   width: 4000px;
