--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body{
   margin: 0;
   padding: 0;
-  background: url(bg.png) norepeat;
+  background: url(bg.png) no-repeat;
   background-size: cover;
-  height: 30%;
-  width: 30%;
+  height: scale(0.3);
+  width: scale(0.3);
 }
 .box{
   width: 4000px;
