--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     margin-left: 10%;
     margin-right: 10%;
-    margin-top: 5%
+    margin-top: 5%;
     background: url(bg.png);
     background-size: cover;
     transform: scale(0.4);
