--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     transform: scale(0.4);
     transform-origin: 0 0;
     position: absolute;
-    width: 2500px;
+    width: 200%;
 }
 .box{
   background: rgba(0,0,0,0.4);
